[gd_scene load_steps=10 format=3 uid="uid://bh3xk8hxufios"]

[ext_resource type="Script" uid="uid://cvwh3p0iekyw7" path="res://maps/map_objects/door_wood.gd" id="1_6asaa"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6asaa"]
bounce = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1nj8n"]
albedo_color = Color(0.45490196, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1nj8n"]
size = Vector3(1.2932763, 2.4631824, 0.12123291)

[sub_resource type="BoxShape3D" id="BoxShape3D_6asaa"]
size = Vector3(1.505, 2.701, 0.335)

[sub_resource type="Animation" id="Animation_6asaa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dxvpb"]
resource_name = "kicked_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.8151424, 0), Vector3(0, 1.3264502, 0), Vector3(0, 1.5358897, 0)]
}

[sub_resource type="Animation" id="Animation_1nj8n"]
resource_name = "open"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5358897, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dxvpb"]
_data = {
&"RESET": SubResource("Animation_6asaa"),
&"kicked_open": SubResource("Animation_dxvpb"),
&"open": SubResource("Animation_1nj8n")
}

[node name="door_wood" type="RigidBody3D" node_paths=PackedStringArray("animation_player", "door_hitbox")]
physics_material_override = SubResource("PhysicsMaterial_6asaa")
script = ExtResource("1_6asaa")
animation_player = NodePath("AnimationPlayer")
door_hitbox = NodePath("door_hitbox")

[node name="test_model" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.55869395, 1.2234792, -0.031728517)
size = Vector3(1.2910156, 2.4429188, 0.10154297)
material = SubResource("StandardMaterial3D_1nj8n")

[node name="collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.56232446, 1.2345036, -0.036080323)
shape = SubResource("BoxShape3D_1nj8n")

[node name="door_hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.66318613, 1.4090986, 1.8626451e-09)
collision_layer = 1024
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="door_hitbox"]
shape = SubResource("BoxShape3D_6asaa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dxvpb")
}

[connection signal="area_entered" from="door_hitbox" to="." method="_on_door_hitbox_area_entered"]
